@@ -15,9 +15,6 @@ default_widget_makers = {
     colander.Tuple: widget.TextInputCSVWidget,
 }
 
-class filedict(dict):
-    pass
-
 class FileData(object):
     """
     A type representing file data; used to shuttle data back and forth
@@ -104,7 +101,7 @@ class FileData(object):
                     node,
                     _('${value} has no ${key} key', mapping=mapping)
                     )
-        result = filedict()
+        result = widget.filedict()
         result['filename'] = value['filename']
         result['uid'] = value['uid']
         result['mimetype'] = value.get('mimetype')
